# adi_driver

./: CMakeLists.txt  package.xml
config/params/: adis16465_params.yaml  imu_filter_madgwick.yaml
include/adi_driver/: adis16465.h
launch/: adis16465.launch.py  adis16470.launch.py
src/: adis16465.cpp  adis16465_node.cpp  adis16470.cpp  adis16470_node.cpp
